--- a/package.json
+++ b/package.json
@@ -5,19 +5,36 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "fontfaceobserver": "^2.1.0",
+    "framer-motion": "^4.1.9",
     "gatsby": "^3.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-react-leaflet": "^3.0.0",
     "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-images": "^5.0.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-google-spreadsheet": "^2.0.0",
+    "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "leaflet": "^1.7.1",
+    "mdi-material-ui": "^6.22.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-leaflet": "^3.1.0",
+    "react-redux": "^7.2.3",
+    "react-youtube-embed": "^1.0.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "prettier": "2.2.1"
